# Mobile_Device_Application_Development_cell_appotoisis_app

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  minio-cors.json  openapi.json
client/: app.json  build.sh  package-lock.json  package.json
client/app/: _layout.tsx  login.tsx  register.tsx
client/components/: BoundingBoxOverlay.tsx  CreateFolderModal.tsx  FolderCard.tsx  ImageCard.tsx  ResultsPanel.tsx  SyncStatusBar.tsx
client/constants/: config.ts
client/contexts/: AuthContext.tsx
client/services/: analysisService.ts  api.ts  authService.ts  database.ts  imageService.ts  (+7 more)
detail/: activity.md  analyze.md  auth.md  chapter2.tex  class_diagram.md  entity.tex  raw_data.json
model_worker/: Dockerfile  config.py  db_client.py  inference.py  minio_client.py  requirements.txt  worker.py
scripts/: test_upload.py
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  deny.toml
server/migrations/: 20260117090711_create_users_table.sql  20260117090810_create_folders_table.sql  20260117090910_create_images_table.sql  20260117090931_create_jobs_table.sql  20260117090945_create_analysis_results_table.sql  20260118091635_add_deleted_at_and_indexes_to_images.sql  20260124000000_remove_role_from_users.sql
server/src/: lib.rs  main.rs  routes.rs
server/src/config/: settings.rs
server/src/db/: connection.rs
server/src/domain/: error.rs  mod.rs
server/src/dto/: analysis.rs  auth.rs  folder.rs  image.rs  mod.rs
server/src/handlers/: analysis_handlers.rs  auth_handlers.rs  folder_handlers.rs  image_handlers.rs  mod.rs
server/src/middleware/: auth.rs  mod.rs  security_headers.rs
server/src/models/: folder.rs  image.rs  job.rs  mod.rs  user.rs
server/src/repositories/: folder_repository.rs  image_repository.rs  job_repository.rs  mod.rs  user_repository.rs
server/src/services/: auth_service.rs  image_service.rs  mod.rs  rabbitmq_service.rs  s3_service.rs
server/tests/: db_integration.rs  folder_integration.rs
(+28 files in other folders)
