[package]
name = "cell-analysis-backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Backend API for cancer cell analysis application, apoptosis and viable cell"

[dependencies]

# Core Framework
actix-web = "4"
actix-governor = "0.5"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
tokio = { version = "1", features = ["full"] }

# Database & ORM
sqlx = { version = "0.8.6", features = [
                    "runtime-tokio",
                    "postgres",
                    "uuid",
                    "chrono",
                    "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Authentication & Security
argon2 = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
rusty_paseto = "0.6"
rustls = "0.22"
hkdf = "0.12"
sha2 = "0.10"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1"
anyhow = "1"

# Environment
dotenvy = "0.15"

# Async utilities
futures = "0.3"

# Validation
validator = { version = "0.20.0", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
actix-multipart = "0.7.2"

# Random (for mock AI)
rand = "0.8"

# S3/MinIO Storage
rust-s3 = "0.35"
config = "0.15.19"

# RabbitMQ
lapin = "2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1"
actix-rt = "2"
actix-http = "3"
tokio-test = "0.4"
fake = { version = "2", features = ["derive"] }
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
